--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Event Location</title>
   <script>
     // Replace these with your location details
-    const googleMapsUrl = "https://www.google.com/maps?q=23.0224406,72.5205199"; // Example: Jodhpur community hall 
+    const googleMapsUrl = "https://maps.google.com/?q=23.0224406,72.5205199"; // Example: Jodhpur community hall 
     const appleMapsUrl  = "http://maps.apple.com/?q=23.0224406,72.5205199";
 
     window.onload = function() {
