--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     // Replace these with your location details
     const googleMapsUrl = "https://maps.google.com/?q=23.0224406,72.5205199"; // Example: Jodhpur community hall 
-    const appleMapsUrl  = "http://maps.apple.com/?q=23.0224406,72.5205199";
+    const appleMapsUrl  = "https://maps.apple.com/place?place-id=I14B5B6DC4A340908";
 
     window.onload = function() {
       const ua = navigator.userAgent.toLowerCase();
